# get_next_line

./: 1.txt  CMakeLists.txt  Makefile  README.md  a.out  bin1  bin2  file1  file11  file12  file23  ft_memsub.c  ft_realloc.c  ft_string.c  ft_string.h  get_next_line.c  get_next_line.h  libft.h  main  main.c  noenld  one_big_fat_line.txt  res1  res2  test_cat  test_gnl
libft/: Makefile  ft_atoi.c  ft_numlen.c  ft_string.h  libft.h
libft/ft_map/: rb_tree_delete.c  rb_tree_insert.c
libft/ft_string/: ft_string.c
libft/includes/: libft.h
main.dSYM/Contents/Resources/DWARF/: main
test_gnl.dSYM/Contents/Resources/DWARF/: test_gnl
tests/: 01_test.txt  01_test.txt.diff  01_test.txt.my  05_test.txt
